# sip_optimal_control

./: .dockerignore  .gitignore  README.md  build_docker.sh  dockerfile  run_docker.sh  third_party_licenses.md
.docker/: entrypoint.sh
sipoc_mobile_robot/sipoc_mr_nav2_controller/: CMakeLists.txt  nav2_capsule_nominal_controller_plugin.xml  nav2_dilated_polygon_nominal_controller_plugin.xml  nav2_dilated_polygon_robust_controller_plugin.xml  package.xml
sipoc_mobile_robot/sipoc_mr_nav2_controller/include/sipoc_mr_nav2_controller/: nav2_capsule_nominal_controller_plugin.hpp  nav2_dilated_polygon_nominal_controller_plugin.hpp  nav2_dilated_polygon_robust_controller_plugin.hpp
sipoc_mobile_robot/sipoc_mr_nav2_controller/src/: nav2_capsule_nominal_controller_plugin.cpp  nav2_dilated_polygon_nominal_controller_plugin.cpp  nav2_dilated_polygon_robust_controller_plugin.cpp
sipoc_mobile_robot/sipoc_mr_solver/: CMakeLists.txt  package.xml  setup.py
sipoc_mobile_robot/sipoc_mr_solver/include/sipoc_mr_solver/: base_controller.hpp  capsule_nominal_controller.hpp  dilated_polygon_nominal_controller.hpp  dilated_polygon_robust_controller.hpp
sipoc_mobile_robot/sipoc_mr_solver/include/sipoc_mr_solver/pybind/: capsule_nominal_controller_pybind.hpp  dilated_polygon_nominal_controller_pybind.hpp  dilated_polygon_robust_controller_pybind.hpp
sipoc_mobile_robot/sipoc_mr_solver/py_scripts/: generate_code_for_acados_solver.py  main_capsule_nominal_controller.py  main_dilated_polygon_controller.py
sipoc_mobile_robot/sipoc_mr_solver/src/: base_controller.cpp  capsule_nominal_controller.cpp  dilated_polygon_nominal_controller.cpp  dilated_polygon_robust_controller.cpp
sipoc_mobile_robot/sipoc_mr_solver/src/pybind/: capsule_nominal_controller_pybind.cpp  dilated_polygon_nominal_controller_pybind.cpp  dilated_polygon_robust_controller_pybind.cpp  solver_status_pybind.cpp
sipoc_mobile_robot/sipoc_mr_solver/tests/: CMakeLists.txt  test_capsule_nominal_controller.cpp  test_dilated_polygon_nominal_controller.cpp  test_dilated_polygon_robust_controller.cpp
sipoc_mobile_robot/sipoc_mr_utils/: CMakeLists.txt  package.xml  setup.py
sipoc_mobile_robot/sipoc_mr_utils/cmake/Modules/: FindCLARABEL.cmake
sipoc_mobile_robot/sipoc_mr_utils/include/sipoc_mr_utils/: LICENSE.MIT  common_structs.hpp  distance_minimizer_ellipsoid_to_polygon.hpp  distance_minimizer_point_to_line.hpp  distance_minimizer_point_to_polygon.hpp  ellipsoidal_uncertainty_propagation.hpp  sd_dead_reckoning.h  signed_distance_map.hpp  spline_fitter.hpp  spline_wrapper.hpp  state_predictor_filter.hpp  time_optimal_velocity.hpp  velocity_profile_optimizer.hpp
sipoc_mobile_robot/sipoc_mr_utils/include/sipoc_mr_utils/impl/: distance_minimizer_point_to_line_impl.hpp
sipoc_mobile_robot/sipoc_mr_utils/src/: distance_minimizer_ellipsoid_to_polygon.cpp  distance_minimizer_point_to_polygon.cpp  ellipsoidal_uncertainty_propagation.cpp  signed_distance_map.cpp  spline_fitter.cpp  spline_wrapper.cpp  state_predictor_filter.cpp  time_optimal_velocity.cpp  velocity_profile_optimizer.cpp
sipoc_mobile_robot/sipoc_mr_utils/src/pybind/: distance_minimizer_ellipsoid_to_polygon_pybind.cpp  distance_minimizer_point_to_polygon_pybind.cpp  signed_distance_map_pybind.cpp  velocity_profile_optimizer_pybind.cpp
sipoc_mobile_robot/sipoc_mr_utils/tests/: CMakeLists.txt  test_distance_minimizer_ellipsoid_to_polygon.cpp  test_distance_minimizer_point_to_polygon.cpp  test_signed_distance_map.cpp  test_state_predictor_filter.cpp
sipoc_mobile_robot/sipoc_mr_utils/tests/py_scripts/: test_distance_minimizer_ellipsoid_to_polygon.py  test_distance_minimizer_point_to_polygon.py  test_velocity_profile_optimizer.py
sipoc_plot_utils/: package.xml  setup.cfg  (+1 more)
sipoc_robot_arm/sipoc_ra_ros2/: CMakeLists.txt  package.xml
sipoc_robot_arm/sipoc_ra_ros2/include/sipoc_ra_ros2/: sia20d_car_seat_mpc_node.hpp  sia20d_car_seat_planner_node.hpp
sipoc_robot_arm/sipoc_ra_ros2/launch/: sia20d_car_seat_mpc_node.launch.py  sia20d_car_seat_planner_node.launch.py
sipoc_robot_arm/sipoc_ra_ros2/params/: sipoc_ra.yaml
sipoc_robot_arm/sipoc_ra_ros2/rviz/: sipoc_ra.rviz
sipoc_robot_arm/sipoc_ra_ros2/src/: sia20d_car_seat_mpc_node.cpp  sia20d_car_seat_planner_node.cpp
sipoc_robot_arm/sipoc_ra_solver/: CMakeLists.txt  package.xml
sipoc_robot_arm/sipoc_ra_solver/examples/: CMakeLists.txt  sia20d_car_seat_mpc.cpp  sia20d_car_seat_planner.cpp
sipoc_robot_arm/sipoc_ra_solver/include/sipoc_ra_solver/: car_seat_trajectory_solver.hpp  coal_collision_detection.hpp  collision_constraint_manager.hpp  openvdb_signed_distance_field.hpp  pinocchio_kinematics-impl.hpp  pinocchio_kinematics.hpp
sipoc_robot_arm/sipoc_ra_solver/py_scripts/: generate_code_car_seat_min_length_ocp_solver.py  generate_code_car_seat_trajectory_tracking_ocp_solver.py
sipoc_robot_arm/sipoc_ra_solver/src/: car_seat_trajectory_solver.cpp  coal_collision_detection.cpp  collision_constraint_manager.cpp  openvdb_signed_distance_field.cpp  pinocchio_kinematics.cpp
sipoc_robot_arm/sipoc_ra_solver/test/: CMakeLists.txt  test_coal_collision_detection.cpp  test_collision_constraint_manager.cpp  test_openvdb_signed_distance_field.cpp  test_pinocchio_kinematics.cpp
sipoc_robot_arm/sipoc_ra_support/: CMakeLists.txt  package.xml
sipoc_robot_arm/sipoc_ra_support/meshes/car_seat/: car_whole.stl  seat_padding_sphere.dae  seat_whole.stl
sipoc_robot_arm/sipoc_ra_support/src/: stl2octomap_generation.cpp
sipoc_robot_arm/sipoc_ra_support/urdf/: sia20d_car_seat.urdf
sipoc_robot_arm/sipoc_ra_utils/: CMakeLists.txt  package.xml
sipoc_robot_arm/sipoc_ra_utils/include/sipoc_ra_utils/: common_structs.hpp  sia20d_car_seat_velocity_profile_optimizer.hpp  spline_fitter_8dim.hpp  spline_wrapper_8dim.hpp  time_optimal_velocity.hpp  utils.hpp
sipoc_robot_arm/sipoc_ra_utils/src/: sia20d_car_seat_velocity_profile_optimizer.cpp  spline_fitter_8dim.cpp  spline_wrapper_8dim.cpp  time_optimal_velocity.cpp  utils.cpp
sipoc_robot_arm/sipoc_ra_utils/tests/: CMakeLists.txt  test_sia20d_car_seat_velocity_profile_optimizer.cpp
(+17 files in other folders)
