<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sipoc_mr_nav2_controller</name>
  <version>1.0.0</version>
  <description>SIP-based controller for robot navigation as a Nav2 plugin</description>
  <maintainer email="rubygaoyunfan@gmail.com">Yunfan</maintainer>
  <license>AGPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>nav2_common</depend>
  <depend>nav2_core</depend>
  <depend>nav2_util</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>pluginlib</depend>
  <depend>Clarabel</depend>
  <depend>tf2</depend>
  <depend>boost</depend>
  <depend>sipoc_mr_solver</depend>
  <depend>sipoc_mr_utils</depend>
  <depend>sipoc_ros2_interfaces</depend>

  <exec_depend>nav2_bringup</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <nav2_core plugin="${prefix}/nav2_capsule_nominal_controller_plugin.xml" />
    <nav2_core plugin="${prefix}/nav2_acados_capsule_robust_controller_plugin.xml" />
    <nav2_core plugin="${prefix}/nav2_dilated_polygon_nominal_controller_plugin.xml" />
  </export>

</package>
