<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sipoc_mr_solver</name>
  <version>0.0.0</version>
  <description>Solver for mobile robot SIP nominal and robust OCPs.</description>
  <maintainer email="rubygaoyunfan@gmail.com">Yunfan</maintainer>
  <license>AGPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>sipoc_mr_support</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>eigen</depend>
  <depend>manif</depend>
  <depend>Clarabel</depend>
  <depend>sipoc_mr_utils</depend>
  <build_depend>pybind11-dev</build_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>casadi-pip</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
