<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sipoc_mr_utils</name>
  <version>0.0.0</version>
  <description>Utilities including the lower-level solver, reference trajectory generator, Euclidean signed distance transform, etc.</description>
  <maintainer email="rubygaoyunfan@gmail.com">Yunfan</maintainer>
  <license>AGPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>eigen</depend>
  <depend>manif</depend>
  <depend>Clarabel</depend>
  <depend>boost</depend>
  <depend>libgsl</depend>
  <depend>fmt</depend>
  <build_depend>pybind11-dev</build_depend>
  <exec_depend>py_sipoc_mr_utils</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
